[metadata]
name = remote4neovim
version = 0.0.1
author = rtfcv
author_email = author@example.com
description = wrapper for neovim remote function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtfcv/remote4nvim
project_urls =
    Bug Tracker = https://github.com/rtfcv/remote4nvim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    psutil

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    r4n=r4n:main
